# CTOS

./: .gitignore  BTC_IS_THE_KING_operation_log.json  Backpack账户ID集成总结.md  CLOSED_SOURCE_GUIDE.md  README.md  README_EN.md  TODO-List  _rates.txt  clean_history.sh  complete_cleanup.sh  environment-win.yml  environment.yml  git-auto.sh  log.txt  pyproject.toml  requirements.txt  requirements_me.txt  test_backpack_account_mapping.py  test_dynamic_account_mapping.py
.github/workflows/: ci.yml
apps/: Config.py  DataHandler.py  ExecutionEngine.py  SignalGenerator.py  SystemMonitor.py
apps/discord/: discord_bot.py  signal_config.json  signal_executor.py
apps/indicatorVisualization/: README_config.md  best_performance_coins.txt  draw_hedge_index.py  good_group_plot.txt  multithread_average_method.py
apps/indicatorVisualization/bollinger_analysis/: bollinger_history_15m.json  (+11 more)
apps/lottery/: README.md  audit_chain.jsonl  config.json  lottery.py  winners.csv
apps/strategies/: README.md  Strategy-BTC.py
apps/utils/: logger.py  utils.py
apps/website/: README.md
configs/: README.md  account_reader.py  config_reader.py  ctos.yaml  example_account.yaml  example_usage.py  secrets.example.yaml
ctos/: __init__.py
docs/: README_EN.md  README_KR.md  arbitrage_strategy_design.md
scripts/: README_JP.md  README_KR.md  config_env.py  language_selector.md  net_probe.py
tests/: README.md  README_bp.md  README_bp.py  README_okx.md  test_bp_driver.py  test_execution_engine_simple.py  test_okx_driver.py  test_round_like.py
tools/: root_path_helper.py
(+154 files in other folders)
