[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpx"
version = "0.1.0"
description = "Backpack exchange Python client (vendored in ctos)."
authors = [
  { name = "ctos" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
# Map top-level package name "bpx" to local source directory
bpx = "ctos/drivers/backpack/bpx"

[tool.setuptools.packages.find]
# Only package the mapped "bpx" directory
where = ["."]
include = ["bpx*"]
