[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpx"
version = "0.1.0"
description = "Backpack exchange Python client"
authors = [{ name = "ctos" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["ctos/drivers/backpack"]
include = ["bpx*"]
